@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 
 <strings>
-
 <!-- Plugin settings -->
-    
     <string id="30000">Enable Debug Logging</string>
-    
 </strings>
