@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 
 <settings>
-    
    <setting id="debug" type="bool" label="30000" default="true" />
-    
 </settings>
